--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "build.global-ui": "rollup -c tools/rollup.umd.js -i lib/interface/dialects/bdd_global_var.js -o global.js",
     "build.getter-ui": "rollup -c tools/rollup.umd.js -i lib/interface/dialects/bdd_getter_var.js -o getter.js",
     "build": "npm run build.ui && npm run build.global-ui && npm run build.getter-ui",
-    "lint": "eslint --fix lib"
+    "lint": "eslint -c .eslintrc.js --fix spec --rulesdir lib/eslint"
   },
   "jest": {
     "testEnvironment": "node",
