--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,13 @@
 language: node_js
 
 node_js:
-  - 8 # 2019-12-01
+  - 10 # 2020-04-01
   - lts/*
   - node
 
-before_install:
-  - if [[ `npm -v` = 2* ]]; then npm i -g npm@3.10.8; fi
+services:
+  - xvfb
 
 before_script:
   - npm run build
   - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - sleep 3
