--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "jasmine": "^3.0.0",
     "jest": "^25.0.0",
     "karma": "^4.0.0",
-    "karma-firefox-launcher": "^1.0.1",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^3.0.0",
     "karma-mocha": "^1.3.0",
     "mocha": "^7.0.0",
+    "puppeteer": "^2.1.1",
     "rollup": "^1.0.0",
     "rollup-plugin-babel": "^4.0.0",
     "rollup-plugin-commonjs": "^10.0.0",
