--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "@babel/plugin-transform-object-assign": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "chai": "^4.1.2",
     "chai-spies": "^1.0.0",
@@ -47,7 +49,8 @@
     "rollup": "^2.0.0",
     "rollup-plugin-babel": "^4.0.0",
     "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-inject": "^3.0.0"
+    "rollup-plugin-inject": "^3.0.0",
+    "semantic-release": "^17.3.0"
   },
   "scripts": {
     "mocha": "NODE_PATH=. mocha -r spec/config spec/*_examples.js spec/shared_behavior_spec.js",
@@ -77,7 +80,9 @@
     "build.global-ui": "rollup -c tools/rollup.umd.js -i lib/interface/dialects/bdd_global_var.js -o global.js",
     "build.getter-ui": "rollup -c tools/rollup.umd.js -i lib/interface/dialects/bdd_getter_var.js -o getter.js",
     "build": "npm run build.ui && npm run build.global-ui && npm run build.getter-ui",
-    "lint": "eslint --fix lib"
+    "lint": "eslint --fix lib",
+    "prerelease": "NODE_ENV=production npm run build",
+    "release": "semantic-release"
   },
   "jest": {
     "testEnvironment": "node",
@@ -99,5 +104,18 @@
     "index.js.map",
     "index.d.ts",
     "interface.d.ts"
-  ]
+  ],
+  "release": {
+    "branches": [
+      "master"
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      "@semantic-release/git",
+      "@semantic-release/github"
+    ]
+  }
 }
