--- a/package.json
+++ b/package.json
@@ -130,7 +130,12 @@
       "master"
     ],
     "plugins": [
-      "@semantic-release/commit-analyzer",
+      ["@semantic-release/commit-analyzer", {
+        "releaseRules": [
+          { "type": "chore", "scope": "deps", "release": "patch" },
+          { "type": "docs", "scope": "README", "release": "patch" }
+        ]
+      }],
       "@semantic-release/release-notes-generator",
       "@semantic-release/changelog",
       "@semantic-release/npm",
