--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
+    "expect": "^26.6.2",
     "jasmine": "^3.0.0",
     "jest": "^26.0.0",
     "karma": "^6.0.0",
@@ -50,7 +51,10 @@
     "rollup-plugin-babel": "^4.0.0",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-inject": "^3.0.0",
-    "semantic-release": "^17.3.0"
+    "semantic-release": "^17.3.0",
+    "ts-jest": "^26.5.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   },
   "scripts": {
     "mocha": "NODE_PATH=. mocha -r spec/config spec/*_examples.js spec/shared_behavior_spec.js",
@@ -87,11 +91,12 @@
   "jest": {
     "testEnvironment": "node",
     "testMatch": [
-      "<rootDir>/spec/**/*_spec.js"
+      "<rootDir>/spec/**/*_spec.js",
+      "<rootDir>/test.ts"
     ],
-    "setupFilesAfterEnv": [
-      "./tools/jest.setup.js"
-    ]
+    "transform": {
+      "\\.ts$": "ts-jest"
+    }
   },
   "files": [
     "getter.js",
@@ -106,9 +111,6 @@
     "interface.d.ts"
   ],
   "release": {
-    "branches": [
-      "master"
-    ],
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
@@ -117,5 +119,10 @@
       "@semantic-release/git",
       "@semantic-release/github"
     ]
+  },
+  "dependencies": {
+    "@types/jasmine": "^3.6.4",
+    "@types/jest": "^26.0.20",
+    "@types/mocha": "^8.2.1"
   }
 }
